--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "derive-key": "^1.0.0",
     "derived-key-storage": "^2.1.0",
     "fd-lock": "^1.0.2",
-    "hypercore": "^9.0.0",
-    "hypercore-crypto": "^2.0.0",
+    "hypercore": "lukeburns/hypercore#ristretto",
+    "hypercore-channels": "lukeburns/hypercore-channels",
+    "hypercore-crypto": "lukeburns/hypercore-crypto#ristretto",
     "hypercore-protocol": "^8.0.0",
     "nanoresource": "^1.3.0",
     "refpool": "^1.2.0"
