--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "b4a": "^1.6.7",
     "hypercore": "^11.0.0",
-    "hypercore-crypto": "^3.4.2",
+    "hypercore-crypto": "github:lukeburns/hypercore-crypto",
     "hypercore-errors": "^1.4.0",
     "hypercore-id-encoding": "^1.3.0",
     "ready-resource": "^1.1.1",
@@ -23,6 +23,9 @@
     "prettier-config-holepunch": "^2.0.0",
     "rache": "^1.0.0",
     "test-tmp": "^1.3.0"
+  },
+  "overrides": {
+    "hypercore-crypto": "github:lukeburns/hypercore-crypto"
   },
   "scripts": {
     "format": "prettier --write .",
